Fix Time widget alignment in grid edit mode
Addresses RM-38850

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -649,7 +649,7 @@
   width: auto;
 }
 
-.slick-editor .form-item-container.time-item > input.ui-mask {
+.slick-editor .form-item-container.duration-item > input.ui-mask {
   text-align: right;
 }
 
